fixed navbar z-index

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,7 +25,7 @@ code {
   position: sticky;
   position: -webkit-sticky;
   top: 0;
-  z-index: 1;
+  z-index: 10;
   height: 44px;
   display: flex;
   flex-direction: column;
